# experimentation-ab-testing

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/cache/matplotlib/: fontlist-v390.json
docker/: Dockerfile
src/expab/: cli.py
src/expab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/expab/analysis/: pipeline.py  reporting.py
src/expab/data/: generator.py
src/expab/randomization/: assignment.py
src/expab/stats/: cuped.py  power.py  tests.py
src/tests/: test_smoke.py
