[project]
name = "expab"
version = "0.1.0"
description = "Production-grade A/B testing toolkit for signup funnel"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "typer>=0.12",
    "pydantic>=2.7",
    "matplotlib>=3.8"
    ]


[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "black>=24.4"
    ]


[project.scripts]
expab = "expab.cli:app"


[tool.black]
line-length = 100


[tool.ruff]
line-length = 100